<resources>
    <string name="app_name">GSB</string>

    <string name="title_section1">Show drugs</string>
    <string name="title_section2">Show instructions</string>
    <string name="title_section3">Add a drug</string>
    <string name="title_section4">Delete a drug</string>
    <string name="title_section5">Update drug information</string>

    <string name="medoc_compo">Composition :\u0020 </string>
    <string name="medoc_effet">Effet :\u0020 </string>
    <string name="medoc_contre">Contre Indication :\u0020 </string>
    <string name="medoc_prix">Price :\u0020 </string>
    <string name="medoc_compo_u"><u>Composition :</u>\u0020 </string>
    <string name="medoc_effet_u"><u>Effet :</u>\u0020 </string>
    <string name="medoc_contre_u"><u>Contre Indication :</u>\u0020 </string>
    <string name="medoc_prix_u"><u>Price :</u>\u0020 </string>
    <string name="medoc_id">Identifiant :</string>
    <string name="medoc_nom">Name : </string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_liste_medoc">Drug\'s list</string>
    <string name="title_home">Welcome in GSB app</string>
    <string name="title_activity_ajout_medoc">Add a drug</string>
    <string name="add_button">Add</string>
    <string name="title_activity_dosage">Instruction</string>
    <string name="action_infos">Useful information</string>
    <string name="choix_medoc">Select a drug : </string>
    <string name="choix_indiv">Select a type : </string>
    <string name="button_dosage">See instruction</string>
    <string name="title_activity_voir_dosage">The instruction</string>
    <string name="title_activity_ajout_medoc2">Add instruction</string>
    <string name="TextButtonNext">Next</string>
    <string name="quantite">Quantite :</string>
    <string name="unite">Unit : </string>
    <string name="duree">Frequence : </string>
    <string name="info_indiv">type informations</string>
    <string name="title_activity_infos">Useful Informations</string>
    <string name="title_activity_infos_dosage">Instruction\'s Informations</string>

</resources>
