<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:attr/actionBarSize"
    tools:context="com.example.warren.gsb.Form_dosage">

    <TextView
        android:id="@+id/text_choix_medoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:text="@string/choix_medoc" />

    <Spinner
        android:id="@+id/spinner_medoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_choix_medoc"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/text_choix_indiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinner_medoc"
        android:layout_marginTop="52dp"
        android:text="@string/choix_indiv" />

    <Spinner
        android:id="@+id/spinner_indiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_choix_indiv"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_dosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_indiv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/button_dosage" />
</RelativeLayout>
