<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/MedocName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/MedocCompo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/MedocName"
        android:text="@string/medoc_compo" />

    <TextView
        android:id="@+id/text_MedocCompo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MedocName"
        android:layout_toEndOf="@+id/MedocCompo"
        android:layout_toRightOf="@+id/MedocCompo" />

    <TextView
        android:id="@+id/MedocEffet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/MedocCompo"
        android:text="@string/medoc_effet" />

    <TextView
        android:id="@+id/text_MedocEffet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MedocCompo"
        android:layout_toEndOf="@+id/MedocEffet"
        android:layout_toRightOf="@+id/MedocEffet" />

    <TextView
        android:id="@+id/MedocContre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/MedocEffet"
        android:text="@string/medoc_contre" />

    <TextView
        android:id="@+id/text_MedocContre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/MedocContre"
        android:layout_toEndOf="@+id/MedocContre"
        android:layout_toRightOf="@+id/MedocContre" />

    <TextView
        android:id="@+id/MedocPrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/MedocContre"
        android:text="@string/medoc_prix" />

    <TextView
        android:id="@+id/textext_MedocPrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/MedocPrix"
        android:layout_toEndOf="@+id/MedocPrix"
        android:layout_toRightOf="@+id/MedocPrix" />

    <TextView
        android:id="@+id/inutile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
</RelativeLayout>